--- a/dashboard.html
+++ b/dashboard.html
@@ -43,7 +43,238 @@
         </ul>
         <div class="tab-content mt-3" id="dashboardTabsContent">
             <div class="tab-pane fade show active" id="data" role="tabpanel" aria-labelledby="data-tab">
-                <p>This is the Data tab. Add your data-related content here.</p>
+                <div class="row">
+
+                    <div class="col-12 col-md-6 mb-3">
+                        <div class="p-3 border bg-light">
+                            <h5>January</h5>
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="january-income-label">Income</span>
+                                        <input type="number" class="form-control" id="january-income" placeholder="Enter income" aria-labelledby="january-income-label">
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="january-expenses-label">Expenses</span>
+                                        <input type="number" class="form-control" id="january-expenses" placeholder="Enter expenses" aria-labelledby="january-expenses-label">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 mb-3">
+                        <div class="p-3 border bg-light">
+                            <h5>February</h5>
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="february-income-label">Income</span>
+                                        <input type="number" class="form-control" id="february-income" placeholder="Enter income" aria-labelledby="february-income-label">
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="february-expenses-label">Expenses</span>
+                                        <input type="number" class="form-control" id="february-expenses" placeholder="Enter expenses" aria-labelledby="february-expenses-label">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 mb-3">
+                        <div class="p-3 border bg-light">
+                            <h5>March</h5>
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="march-income-label">Income</span>
+                                        <input type="number" class="form-control" id="march-income" placeholder="Enter income" aria-labelledby="march-income-label">
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="march-expenses-label">Expenses</span>
+                                        <input type="number" class="form-control" id="march-expenses" placeholder="Enter expenses" aria-labelledby="march-expenses-label">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 mb-3">
+                        <div class="p-3 border bg-light">
+                            <h5>April</h5>
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="april-income-label">Income</span>
+                                        <input type="number" class="form-control" id="april-income" placeholder="Enter income" aria-labelledby="april-income-label">
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="april-expenses-label">Expenses</span>
+                                        <input type="number" class="form-control" id="april-expenses" placeholder="Enter expenses" aria-labelledby="april-expenses-label">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 mb-3">
+                        <div class="p-3 border bg-light">
+                            <h5>May</h5>
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="may-income-label">Income</span>
+                                        <input type="number" class="form-control" id="may-income" placeholder="Enter income" aria-labelledby="may-income-label">
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="may-expenses-label">Expenses</span>
+                                        <input type="number" class="form-control" id="may-expenses" placeholder="Enter expenses" aria-labelledby="may-expenses-label">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 mb-3">
+                        <div class="p-3 border bg-light">
+                            <h5>June</h5>
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="june-income-label">Income</span>
+                                        <input type="number" class="form-control" id="june-income" placeholder="Enter income" aria-labelledby="june-income-label">
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="june-expenses-label">Expenses</span>
+                                        <input type="number" class="form-control" id="june-expenses" placeholder="Enter expenses" aria-labelledby="june-expenses-label">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 mb-3">
+                        <div class="p-3 border bg-light">
+                            <h5>July</h5>
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="july-income-label">Income</span>
+                                        <input type="number" class="form-control" id="july-income" placeholder="Enter income" aria-labelledby="july-income-label">
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="july-expenses-label">Expenses</span>
+                                        <input type="number" class="form-control" id="july-expenses" placeholder="Enter expenses" aria-labelledby="july-expenses-label">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 mb-3">
+                        <div class="p-3 border bg-light">
+                            <h5>August</h5>
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="august-income-label">Income</span>
+                                        <input type="number" class="form-control" id="august-income" placeholder="Enter income" aria-labelledby="august-income-label">
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="august-expenses-label">Expenses</span>
+                                        <input type="number" class="form-control" id="august-expenses" placeholder="Enter expenses" aria-labelledby="august-expenses-label">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 mb-3">
+                        <div class="p-3 border bg-light">
+                            <h5>September</h5>
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="september-income-label">Income</span>
+                                        <input type="number" class="form-control" id="september-income" placeholder="Enter income" aria-labelledby="september-income-label">
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="september-expenses-label">Expenses</span>
+                                        <input type="number" class="form-control" id="september-expenses" placeholder="Enter expenses" aria-labelledby="september-expenses-label">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 mb-3">
+                        <div class="p-3 border bg-light">
+                            <h5>October</h5>
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="october-income-label">Income</span>
+                                        <input type="number" class="form-control" id="october-income" placeholder="Enter income" aria-labelledby="october-income-label">
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="october-expenses-label">Expenses</span>
+                                        <input type="number" class="form-control" id="october-expenses" placeholder="Enter expenses" aria-labelledby="october-expenses-label">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 mb-3">
+                        <div class="p-3 border bg-light">
+                            <h5>November</h5>
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="november-income-label">Income</span>
+                                        <input type="number" class="form-control" id="november-income" placeholder="Enter income" aria-labelledby="november-income-label">
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="november-expenses-label">Expenses</span>
+                                        <input type="number" class="form-control" id="november-expenses" placeholder="Enter expenses" aria-labelledby="november-expenses-label">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 mb-3">
+                        <div class="p-3 border bg-light">
+                            <h5>December</h5>
+                            <div class="row mt-3">
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="december-income-label">Income</span>
+                                        <input type="number" class="form-control" id="december-income" placeholder="Enter income" aria-labelledby="december-income-label">
+                                    </div>
+                                </div>
+                                <div class="col-6">
+                                    <div class="input-group">
+                                        <span class="input-group-text" id="december-expenses-label">Expenses</span>
+                                        <input type="number" class="form-control" id="december-expenses" placeholder="Enter expenses" aria-labelledby="december-expenses-label">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
             <div class="tab-pane fade" id="chart" role="tabpanel" aria-labelledby="chart-tab">
                 <p>This is the Chart tab. Add your chart-related content here.</p>
