--- a/dashboard.html
+++ b/dashboard.html
@@ -42,6 +42,8 @@
             </li>
         </ul>
         <div class="tab-content mt-3" id="dashboardTabsContent">
+
+            <!-- Data tab -->
             <div class="tab-pane fade show active" id="data" role="tabpanel" aria-labelledby="data-tab">
                 <div class="row">
 
@@ -276,9 +278,14 @@
 
                 </div>
             </div>
+
+
+            <!-- Chart tab -->
             <div class="tab-pane fade" id="chart" role="tabpanel" aria-labelledby="chart-tab">
-                <p>This is the Chart tab. Add your chart-related content here.</p>
+                <canvas id="barChart" width="400" height="200"></canvas>
             </div>
+
+
         </div>
     </main>
     <footer class="text-center py-4">
@@ -288,6 +295,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Bootstrap Bundle JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
