Download Feature Added

--- a/dashboard.html
+++ b/dashboard.html
@@ -283,8 +283,12 @@
             <!-- Chart tab -->
             <div class="tab-pane fade" id="chart" role="tabpanel" aria-labelledby="chart-tab">
                 <canvas id="barChart" width="400" height="200"></canvas>
+                <!-- A plain Bootstrap Button with the label "Download" -->
+                <div class="text-center mt-4">
+                    <button class="btn btn-primary" id="downloadBtn">Download</button>
+                </div>
             </div>
-
+            
 
         </div>
     </main>
